Actually let external libraries be external; many distro's package them, and using them makes it the distro's responsibility rather than ours

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -34,14 +34,14 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 		<title>SwiperProxy</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="css/vendor/bootswatch/bootstrap.min.css">
+		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 		<style>
 			body {
 				padding-top: 50px;
 				padding-bottom: 20px;
 			}
 		</style>
-	        <script src="js/vendor/modernizr/modernizr-latest.js"></script>
+	        <script src="/javascript/modernizr/modernizr.min.js"></script>
 		<script type="text/javascript">
 			function doclick() {
 				document.location="http://"+document.getElementById('url').value+".proxy.example.org";
@@ -49,7 +49,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 		</script>
 	</head>
 	<body>
-		<!--[if lt IE 7]>
+		<!--[if lt IE 7]>w
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. <a href="http://browsehappy.com/">Upgrade your browser</a> to improve your user experience.</p>
 		<![endif]-->
 		<div class="container">
@@ -61,8 +61,8 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 			</form>
 			<br/>
 		</div>
-		<script src="js/vendor/jquery/jquery-2.1.1.min.js"></script>
-		<script>window.jQuery || document.write('<script src="js/vendor/jquery/jquery-2.1.1.min.js"><\/script>')</script>
-		<script src="js/vendor/bootstrap/bootstrap.min.js"></script>
+		<script src="/javascript/jquery/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="/javascript/jquery/jquery.min.js"><\/script>')</script>
+		<script src="/bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
