--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -77,7 +77,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       <h2>Proxify a website!</h2>
       <form action="javascript:doclick()" role="form">
         <label class="control-label" for="url">http(s)://</label>
-        <input required id="url" name="url" placeholder="www.example.org" type="text">
+        <input autofocus required id="url" name="url" placeholder="www.example.org" type="text">
         <button class="btn btn-primary btn-sm" data-loading-text="Loading..." onclick="doclick()" style="display: block;" type="button">Browse</button>
       </form>
       <br>
