--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,11 +1,11 @@
 <!--
-Copyright (c) 2014 SwiperProxy Team
+Copyright (c) 2014-2015 SwiperProxy Team
 
 Permission is hereby granted, free of charge, to any person obtaining a
 copy of this software and associated documentation files (the
 "Software"), to deal in the Software without restriction, including
 without limitation the rights to use, copy, modify, merge, publish
-distribute, sublicense and/or sell copies of the Software, and toc
+distribute, sublicense and/or sell copies of the Software, and to
 permit persons to whom the Software is furnished to do so, subject to
 the following conditions:
 
@@ -22,79 +22,83 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 -->
 
 <!DOCTYPE html>
-<html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <title>SwiperProxy</title>
-    <meta content="The SwiperProxy Team" name="author">
-    <link href="humans.txt" rel="author" type="text/plain">
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
-    <style>
-      body {
-        padding-bottom: 20px;
-        padding-top: 50px;
-      }
-    </style>
-    <!-- CONFIGURE: You should enter your domain name below. -->
-    <script type="text/javascript">
-      function doclick() {
-        document.location="http://proxy.example.org/"+document.getElementById('url').value;
-      }
-    </script>
-  </head>
-  <body>
-    <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/" title="SwiperProxy" type="text/html">SwiperProxy</a>
-          <button class="navbar-toggle collapsed" type="button" data-target="#navbar-main" data-toggle="collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-main">
-          <ul class="nav navbar-nav">
-            <li><a href="https://swiperproxy.github.io" target="_blank" title="About" type="text/html"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;About</a></li>
-            <li><a href="https://github.com/SwiperProxy/swiperproxy/issues" target="_blank" title="Report a bug" type="text/html"><span class="glyphicon glyphicon-bullhorn"></span>&nbsp;Report a bug</a></li>
-            <li><a href="https://swiperproxy.github.io/donate.html" target="_blank" title="Donate" type="text/html"><span class="glyphicon glyphicon-heart"></span>&nbsp;Donate</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="jumbotron">
-      <div class="container">
-        <h1>SWIPERPROXY</h1>
-        <p>Lightning-fast, and the easiest web proxy you will ever use.
-      </div>
-    </div>
-    <main class="container">
-      <div class="alert alert-warning" role="alert">
-        <p><span class="glyphicon glyphicon-warning-sign"></span>&nbsp;Please keep in mind you are using a proxy. You should never enter valuable information like passphrases or credit card details over a proxy, even when using <abbr title="HTTP Secure">HTTPS</abbr>.</p>
-      </div>
-      <h2>Proxify a website!</h2>
-      <form action="javascript:doclick()" role="form">
-        <label class="control-label" for="url">http(s)://</label>
-        <input autofocus required id="url" name="url" placeholder="www.example.org" type="text">
-        <button class="btn btn-primary btn-sm" data-loading-text="Loading..." onclick="doclick()" style="display: block;" type="button">Browse</button>
-      </form>
-      <br>
-    </main>
-    <footer class="container">
-      <hr>
-      <p>
-        <img alt="Free Software" src="img/freesoftware.png">&nbsp;<img alt="Open Source" src="img/opensource.png">&nbsp;<a href="https://github.com/SwiperProxy/swiperproxy/blob/develop/doc/COPYING.md" target="_blank" title="MIT License" type="text/html"><img alt="MIT License" src="img/mitlicense.png"></a> <small>SwiperProxy is free and open source software available under the <a href="https://github.com/SwiperProxy/swiperproxy/blob/master/doc/COPYING.md" target="_blank" title="MIT License" type="text/html"><abbr title="Massachusetts Institute of Technology">MIT</abbr> license</a>.</small><br>
-        <!-- CONFIGURE: You should enter the city, country name and country code below to identify where your proxy is running from. -->
-	<small>This instance is running from <strong>City, <abbr title="Full Country Name">AA</abbr></strong>.</small><br>
-      </p>
-      <p>
-        <!-- CONFIGURE: You should enter your e-mail address below for people to contact you. -->
-	<span class="glyphicon glyphicon-envelope"></span>&nbsp;<small>Contact the maintainer: <a href="mailto:you@example.org">you@example.org</a>
-      </p>
-    </footer>
-    <script src="lib/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-    <script src="lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-  </body>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>SwiperProxy</title>
+		<meta content="self" http-equiv="Content-Security-Policy">
+		<meta content="style" http-equiv="default-style">
+		<meta content="SwiperProxy" name="application-name">
+		<meta content="The SwiperProxy Team" name="author">
+		<meta content="The SwiperProxy Team" name="creator">
+		<meta content="A lightning-fast, easy to use, open source web proxy." name="description">
+		<meta content="index, follow" name="googlebot">
+		<meta content="The SwiperProxy Team" name="publisher">
+		<meta content="index, follow" name="robots">
+		<meta content="index, follow" name="slurp">
+		<link href="humans.txt" rel="author" type="text/plain">
+		<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
+		<link href="css/style.css" id="style" rel="stylesheet" type="text/css">
+		<!-- CONFIGURE: You should enter your domain name below. -->
+		<script type="text/javascript">
+			function doclick() {
+				document.location="http://proxy.example.org/"+document.getElementById('url').value;
+			}
+		</script>
+	</head>
+	<body>
+		<nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="/" hreflang="en" rel="index" title="SwiperProxy" type="text/html">SwiperProxy</a>
+					<button class="navbar-toggle collapsed" type="button" data-target="#navbar-main" data-toggle="collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse" id="navbar-main">
+					<ul class="nav navbar-nav">
+						<li><a href="https://swiperproxy.github.io" hreflang="en" rel="author external" target="_blank" title="About" type="text/html"><span class="glyphicon glyphicon-info-sign"></span> About</a></li>
+						<li><a href="https://github.com/SwiperProxy/swiperproxy/issues" hreflang="en" rel="external" target="_blank" title="Report a bug" type="text/html"><span class="glyphicon glyphicon-bullhorn"></span>&nbsp;Report a bug</a></li>
+						<li><a href="https://swiperproxy.github.io/donate.html" hreflang="en" rel="author external" target="_blank" title="Donate" type="text/html"><span class="glyphicon glyphicon-heart"></span>&nbsp;Donate</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<div class="jumbotron">
+			<div class="container">
+				<h1>SWIPERPROXY</h1>
+				<p>Lightning-fast, and the easiest web proxy you will ever use.
+			</div>
+		</div>
+		<main class="container">
+			<div class="alert alert-warning" role="alert">
+				<p><span class="glyphicon glyphicon-warning-sign"></span> Please keep in mind you are using a proxy. You should never enter valuable information like passphrases or credit card details over a proxy, even when using <abbr title="HTTP Secure">HTTPS</abbr>.</p>
+			</div>
+			<h2>Proxify a website!</h2>
+			<form action="javascript:doclick()" id="proxy" role="form">
+				<label class="control-label" for="url" form="proxy">http(s)://</label>
+				<input autocomplete="off" autofocus form="proxy" id="url" inputmode="url" name="url" placeholder="www.example.org" required spellcheck="false" type="url">
+				<button class="btn btn-primary btn-sm" data-loading-text="Loading..." form="proxy" onclick="doclick()" style="display: block;" type="button">Browse</button>
+			</form>
+			<br>
+		</main>
+		<footer class="container">
+		<hr>
+			<p>
+				<img alt="Free Software" src="img/freesoftware.png"> <img alt="Open Source" src="img/opensource.png"> <a href="https://github.com/SwiperProxy/swiperproxy/blob/develop/doc/COPYING.md" hreflang="en" rel="external license" target="_blank" title="MIT License" type="text/html"><img alt="MIT License" src="img/mitlicense.png"></a> <small>SwiperProxy is free and open source software available under the <a href="https://github.com/SwiperProxy/swiperproxy/blob/master/doc/COPYING.md" hreflang="en" rel="external license" target="_blank" title="MIT License" type="text/html"><abbr title="Massachusetts Institute of Technology">MIT</abbr> license</a>.</small><br>
+				<!-- CONFIGURE: You should enter the city, country name and country code below to identify where your proxy is running from. -->
+				<small>This instance is running from <strong>City, <abbr title="Full Country Name">AA</abbr></strong>.</small><br>
+			</p>
+			<p>
+				<!-- CONFIGURE: You should enter your e-mail address below for people to contact you. -->
+				<span class="glyphicon glyphicon-envelope"></span> <small>Contact the maintainer: <a href="mailto:you@example.org">you@example.org</a>
+			</p>
+		</footer>
+		<script src="lib/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+		<script src="lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+	</body>
 </html>
