--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -36,10 +36,10 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 		<meta content="The SwiperProxy Team" name="publisher">
 		<meta content="index, follow" name="robots">
 		<meta content="index, follow" name="slurp">
-		<link href="humans.txt" rel="author" type="text/plain">
-		<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-		<link href="lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
-		<link href="css/style.css" id="style" rel="stylesheet" type="text/css">
+		<link href="/humans.txt" rel="author" type="text/plain">
+		<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
+		<link href="/css/style.css" id="style" rel="stylesheet" type="text/css">
 		<!-- CONFIGURE: You should enter your domain name below. -->
 		<script type="text/javascript">
 			function doclick() {
@@ -81,13 +81,13 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 			<h2>Proxify a website!</h2>
 			<form action="javascript:doclick()" id="proxy" role="form">
 				<label class="control-label" for="url" form="proxy">http(s)://</label>
-				<input autocomplete="off" autofocus form="proxy" id="url" inputmode="url" name="url" placeholder="www.example.org" required spellcheck="false" type="url">
+				<input autocomplete="off" autofocus form="proxy" id="url" inputmode="url" name="url" placeholder="www.example.org" required spellcheck="false" type="text">
 				<button class="btn btn-primary btn-sm" data-loading-text="Loading..." form="proxy" onclick="doclick()" style="display: block;" type="button">Browse</button>
 			</form>
 			<br>
 		</main>
 		<footer class="container">
-		<hr>
+			<hr>
 			<p>
 				<img alt="Free Software" src="img/freesoftware.png"> <img alt="Open Source" src="img/opensource.png"> <a href="https://github.com/SwiperProxy/swiperproxy/blob/develop/doc/COPYING.md" hreflang="en" rel="external license" target="_blank" title="MIT License" type="text/html"><img alt="MIT License" src="img/mitlicense.png"></a> <small>SwiperProxy is free and open source software available under the <a href="https://github.com/SwiperProxy/swiperproxy/blob/master/doc/COPYING.md" hreflang="en" rel="external license" target="_blank" title="MIT License" type="text/html"><abbr title="Massachusetts Institute of Technology">MIT</abbr> license</a>.</small><br>
 				<!-- CONFIGURE: You should enter the city, country name and country code below to identify where your proxy is running from. -->
@@ -95,10 +95,10 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 			</p>
 			<p>
 				<!-- CONFIGURE: You should enter your e-mail address below for people to contact you. -->
-				<span class="glyphicon glyphicon-envelope"></span> <small>Contact the maintainer: <a href="mailto:you@example.org">you@example.org</a>
+				<span class="glyphicon glyphicon-envelope"></span> <small>Contact the maintainer: <a href="mailto:you@example.org">you@example.org</a></small>
 			</p>
 		</footer>
-		<script src="lib/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-		<script src="lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+		<script src="/lib/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+		<script src="/lib/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 	</body>
 </html>
