Properly use example.org in htdocs

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -45,7 +45,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 			function doclick() {
 				var location = document.getElementById('url').value;
 				var locationregex = location.replace(/^http(s|):\/\//i, "");
-				document.location="http://proxy.donttrustrobots.nl/"+locationregex;
+				document.location="http://proxy.example.org/"+locationregex;
 			}
 		</script>
 	</head>
