--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -37,6 +37,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 		<meta content="index, follow" name="robots">
 		<meta content="index, follow" name="slurp">
 		<link href="/humans.txt" rel="author" type="text/plain">
+		<link href="/favicon.ico" rel="icon" sizes="152x152" type="image/icon">
 		<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<link href="/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
 		<link href="/css/style.css" id="style" rel="stylesheet" type="text/css">
