Build in support for minified css

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -40,7 +40,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 		<link href="/favicon.ico" rel="icon" sizes="152x152" type="image/icon">
 		<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<link href="/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
-		<link href="/css/style.css" id="style" rel="stylesheet" type="text/css">
+		<link href="/css/style.min.css" id="style" rel="stylesheet" type="text/css">
 		<!-- CONFIGURE: You should enter your domain name below. -->
 		<script type="text/javascript">
 			function doclick() {
